--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "../node_modules/.bin/nodemon start"
+    "start": "nodemon start"
   },
   "author": "",
   "license": "ISC",
